Corrigindo package.json e 01-manual-exe.yaml

--- a/.github/workflows/01-manual-exe.yaml
+++ b/.github/workflows/01-manual-exe.yaml
@@ -11,6 +11,8 @@ on:
 # Trabalhos/tarefas dentro do pipeline = jobs
 jobs:
   e2e-tests:
+    name: Executar Testes E2E
+
     # Máquina que o job vai executar
     runs-on: ubuntu-latest
 
@@ -33,14 +35,6 @@ jobs:
       # Instalação das dependências
       - name: Instalar dependências
         run: yarn
-
-      # Instala dependências
-      - name: Instalar dependências
-        run: yarn install
-
-      # Instala o Playwright (adiciona ao projeto)
-      - name: Instalar Playwright
-        run: yarn add -D playwright
 
       # Instalação do Playwright
       - name: Instalar Playwright
