--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "lint": "npm run lint:ts && npm run lint:format",
     "lint:ts": "tsc -b jsconfig.json",
     "lint:format": "prettier --check --ignore-path .gitignore .",
-    "e2e": "npx playwright test"
+    "e2e": "playwright test"
   }
 }
