--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run lint:ts && npm run lint:format",
     "lint:ts": "tsc -b jsconfig.json",
     "lint:format": "prettier --check --ignore-path .gitignore .",
-    "e2e": "playwright test Testes/01-testes.js"
+    "e2e": "playwright test Testes/01-testes.js",
+    "mocha-test": "mocha Testes/01-testes.js"
   }
 }
