Corrigindo arquivo .iaml

--- a/.github/workflows/01-manual-exe.yaml
+++ b/.github/workflows/01-manual-exe.yaml
@@ -16,7 +16,7 @@ jobs:
     # Máquina que o job vai executar
     runs-on: ubuntu-latest
 
-    # Passos do script de build
+    # Passos do script de build s
     steps:
       # Clone do projeto
       - name: Clonar projeto
