--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "npm run lint:ts && npm run lint:format",
     "lint:ts": "tsc -b jsconfig.json",
     "lint:format": "prettier --check --ignore-path .gitignore .",
-    "e2e": "playwright test Testes/01-testes.js",
-    "mocha-test": "npx mocha Testes/01-testes.js"
+    "e2e": "npx mocha Testes/01-testes.js"    
   }
 }
