--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "npm run lint:ts && npm run lint:format",
     "lint:format": "prettier --check --ignore-path .gitignore .",
     "lint:ts": "tsc -b jsconfig.json",
-    "mocha-test": "mocha",
+    "mocha-test": "mocha Testes/01-testes.js",
     "start": "lite-server",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:mutation": "npx stryker run"
